# Johnnie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/src/: imgui.cpp  imgui_impl_glfw.cpp  imgui_widgets.cpp
Dependencies/stb_image/: CMakeLists.txt
Dependencies/stb_image/src/: stb_image.cpp
Dependencies/stduuid/: CMakeLists.txt
Dependencies/stduuid/include/: uuid.hpp
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: Mesh.glsl  ShadowMap.glsl  SkeletalMesh.glsl  SkinnedMeshBoneInfluence.glsl  StaticMesh.glsl  Wireframe.glsl
Engine/Include/: CMakeLists.txt
Engine/Include/Engine/: Camera.hpp  Core.hpp  CoreMinimal.hpp  CoreObject.hpp  Debug.hpp  EntryPoint.hpp  Events.hpp  Gui.hpp  Layers.hpp  Renderer.hpp  Scene.hpp  States.hpp  System.hpp  Utilities.hpp
Engine/Source/: CMakeLists.txt  EnginePCH.hpp  main.cpp
Engine/Source/Core/: Application.cpp  Application.hpp  Asserts.hpp  CoreGLFW.hpp  CoreMinimal.hpp  EntryPoint.hpp  PlatformCheck.hpp  Window.cpp  Window.hpp
Engine/Source/Core/Application/: Application.cpp  Application.hpp  ApplicationDelegates.hpp
Engine/Source/Core/Debug/: Asserts.cpp  Asserts.hpp  Log.cpp  ProfileMacros.hpp  ProfilingManager.cpp  ProfilingManager.hpp  TimingUtility.hpp
Engine/Source/Core/Exceptions/: InitializationException.hpp
Engine/Source/Core/Input/: Input.cpp  Input.hpp
Engine/Source/Core/Layers/: Layer.hpp  LayerManager.cpp  LayerManager.hpp
Engine/Source/Core/Layers/EngineLayers/: EngineBaseLayer.cpp  EngineBaseLayer.hpp
Engine/Source/Core/Log/: Log.cpp  Log.hpp
Engine/Source/Core/Window/: Application.cpp  Application.hpp  IWindow.cpp  IWindow.hpp  Window.cpp  Window.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Core/Window/Platform/: CoreGLFW.hpp
Engine/Source/Events/: Event.hpp  EventsIdentifiers.hpp  IEventListener.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiProperties.cpp  ImGuiProperties.hpp  ImGuiWidgetBase.cpp  ImGuiWidgetBase.hpp
Engine/Source/Log/: Log.cpp  Log.hpp  OutputLogSink.cpp  OutputLogSink.hpp
Engine/Source/Renderer/: ImGuiRenderer.cpp  ImGuiRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererStatistics.cpp  RendererStatistics.hpp
Engine/Source/Renderer/Camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FloatingCamera.cpp  FloatingCamera.hpp
Engine/Source/Renderer/Materials/: DefaultMaterials.cpp  Material.cpp  Material.hpp
Engine/Source/Renderer/RHI/: DynamicRHI.cpp  DynamicRHI.hpp  RHICommand.cpp  RHICommand.hpp  RHITypes.cpp  RHITypes.hpp
Engine/Source/Renderer/RHI/Resources/: RHIBuffers.cpp  RHIBuffers.hpp  RHIFrameBuffer.cpp  RHIFrameBuffer.hpp  RHIResource.cpp  RHIResource.hpp  RHIResourceManager.hpp  RHIResourceManager.inl  RHIShader.cpp  RHIShader.hpp  RHITexture.cpp  RHITexture.hpp  RHIVertexArray.cpp  RHIVertexArray.hpp
Engine/Source/Scene/: Scene.cpp  Scene.hpp  SceneDeleates.cpp  SceneDeleates.hpp  SceneManager.cpp  SceneManager.hpp
Engine/Source/Scene/Entities/: CoreActor.cpp  CoreActor.hpp  CoreEntity.hpp  CoreObject.cpp  CoreObject.hpp  CoreWidget.cpp  CoreWidget.hpp  DrawableManager.cpp  DrawableManager.hpp  Object.cpp  Object.hpp  Tickable.cpp  Tickable.hpp  TickableManager.cpp  TickableManager.hpp
Engine/Source/Scene/Entities/Camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FloatingCamera.cpp  FloatingCamera.hpp
Engine/Source/Scene/Entities/Lights/: DirectionalLight.cpp  (+5 more)
Engine/Source/States/: State.hpp  StateManager.cpp  StateManager.hpp
Engine/Source/System/: Allocator.cpp  Allocator.hpp  Memory.hpp  MemoryManager.cpp  MemoryManager.hpp  System.cpp  System.hpp
Engine/Source/Utilities/: Delegates.hpp  FileUtility.cpp  FileUtility.hpp  FlagOperators.hpp  GLMUtility.hpp  Log.cpp  Log.hpp  Singleton.hpp  StringUtility.cpp  StringUtility.hpp  TimingUtility.hpp  VariantUtility.hpp
Engine/Source/Utilities/OpenGL/: OpenGLCallCheck.hpp  OpenGLExtensionCheck.cpp  OpenGLExtensionCheck.hpp
Johnnie/: CMakeLists.txt  shader.glsl
Johnnie/Assets/Animations/: A_MagicAttack.dae  A_MagicAttack_01.dae  A_MagicStanding.dae  A_MagicStanding2HCastSpell01.dae  A_MagicStanding2HMagicAreaAttack01.dae  A_MagicStandingIdle.dae  A_MagicStandingIdle02.dae  A_MagicStandingIdle_02.dae  A_MagicStandingJump.dae  A_MagicStandingReactDeathBackward.dae  A_MagicStandingReactLargeFromFront.dae  A_MagicStandingReactSmallFromFront.dae  A_MagicStandingRunBack.dae  A_MagicStandingRunForward.dae  A_MagicStandingTurnLeft90.dae  A_MagicStandingTurnRight90.dae  A_MagicStandingWalkBack.dae  A_MagicStandingWalkForward.dae  A_Reaction.dae  A_RumbaDancing.dae
Johnnie/Assets/Models/: 3d-model.fbx  Magicka.dae  Military.fbx  TheBossJoyfulJump.dae  Walking.dae  eggpawn_rigtest.mtl  talerz.mtl
Johnnie/Assets/Shaders/: EmissiveMesh.glsl  StaticMesh.glsl  Wireframe.glsl  mesh_shader.glsl  point_light.glsl  shader.glsl
Johnnie/Source/: CMakeLists.txt  EntryPoint.cpp  JohnnieDelegates.hpp  JohnnieEntryPoint.cpp  JohnnieGlobals.hpp  JohnnieLayer.cpp  JohnnieLayer.hpp  JohnnieScene.cpp  JohnnieScene.hpp  main.cpp
Johnnie/Source/Gui/: CameraDataWidget.cpp  CameraDataWidget.hpp  ConsoleLogWidget.cpp  ConsoleLogWidget.hpp  JohnnieAnimatorWidget.cpp  JohnnieAnimatorWidget.hpp  JohnnieCameraDataWidget.cpp  JohnnieCameraDataWidget.hpp  JohnnieCameraWidget.cpp  JohnnieCameraWidget.hpp  JohnnieConsoleLogWidget.cpp  JohnnieConsoleLogWidget.hpp  JohnnieLoggerWidget.cpp  JohnnieLoggerWidget.hpp  JohnnieMainMenuBarWidget.cpp  JohnnieMainMenuBarWidget.hpp  JohnnieSceneWidget.cpp  JohnnieSceneWidget.hpp  JohnnieStatisticsWidget.cpp  JohnnieStatisticsWidget.hpp  JohnnieSystemStatisticsWidget.cpp  JohnnieSystemStatisticsWidget.hpp  JohnnieViewportWidget.cpp  JohnnieViewportWidget.hpp  MainMenuBar.cpp  MainMenuBar.hpp  MainMenuBarWidget.cpp  MainMenuBarWidget.hpp  SystemStatisticsWidget.cpp  SystemStatisticsWidget.hpp
(+61 files in other folders)
